--- a/Front/Front/main.css
+++ b/Front/Front/main.css
@@ -1,28 +1,99 @@
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+
+/*컨테이너*/
+#jb-container {
+  margin: 10px auto;
+  padding: 20px;
+  border: 1px solid #bcbcbc;
+}
+#jb-header {
+  padding: 20px;
+  margin-bottom: 20px;
+  border: 1px solid #bcbcbc;
+}
+#jb-content {
+  padding: 20px;
+  margin-bottom: 20px;
+  border: 1px solid #bcbcbc;
+}
+#jb-sidebar {
+  padding: 20px;
+  margin-bottom: 20px;
+  border: 1px solid #bcbcbc;
+}
+#jb-footer {
+  padding: 20px;
+  border: 1px solid #bcbcbc;
+}
+@media ( min-width: 481px ) {
+  #jb-container {
+    width: 940px;
   }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+  #jb-content {
+    width: 580px;
+    float: left;
   }
-  
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+  #jb-sidebar {
+    width: 260px;
+    float: right;
   }
-  
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  #jb-footer {
+    clear: both;
+  }
+}
+
+body button {font-size: x-small;}
+
+table.type01 {
+  border-collapse: collapse;
+  text-align: center;
+  font-size: x-small;
+  line-height: 1.5;
+  margin : 20px 10px;
+  }
+  table.type01 th {
+  width: 150px;
+  padding: 10px;
+  font-weight: bold;
+  vertical-align: top;
+  border: 1px solid #ccc;
+  }
+  table.type01 td {
+  width: 350px;
+  padding: 10px;
+  vertical-align: top;
+  border: 1px solid #ccc;
+  }
+
+  table, th, td {
+      border: 1px solid #bcbcbc;
+    }
+    .jb-th-1 {
+      width: 400px;
+    }
