투표 1차 성공

--- a/Vote/VoteProject/customlogin/templates/customlogin/signup.html
+++ b/Vote/VoteProject/customlogin/templates/customlogin/signup.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+
 {% if error %}
 <h3 style="color:red">{{error}}</h3>
 
@@ -20,5 +16,5 @@
 <input type="submit" value="회원가입">
 
 </form>
-</body>
-</html>
+
+{% endblock %}
