--- a/Vote/VoteProject/customlogin/templates/customlogin/signin.html
+++ b/Vote/VoteProject/customlogin/templates/customlogin/signin.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+
 {% if error %}
 <p>{{ error }}</p>
 {% endif %}
@@ -17,5 +13,5 @@
 <input type="submit" value="로그인">
 </form>
 <a href="{% url 'login:signup' %}">회원가입</a>
-</body>
-</html>
+
+{% endblock %}
