--- a/Vote/VoteProject/vote/templates/base.html
+++ b/Vote/VoteProject/vote/templates/base.html
@@ -7,8 +7,19 @@
 <body>
 <h2>netdream 홈페이지</h2>
 <a href="{% url 'vote:index' %}">설문조사</a>
+
+<br>
+{% if user.is_authenticated %}<!-- 만약 로그인이 되어있는 상태이면 -->
+{{user.last_name}} {{user.first_name}}님 환영합니다. <!-- 다음과같이 출력 -->
+<a href="{% url 'login:signout' %}">로그아웃</a> <!-- 로그아웃이 뜨도록 한다. -->
+{% else %} <!-- 로그인이 되어있지않다면 -->
+<a href="{% url 'login:signin' %}">로그인</a> <!-- 로그인과-->
+<a href="{% url 'login:signup' %}">회원가입</a> <!-- 회원가입이 뜨도록 한다. -->
+{% endif %}
+
 <hr> 
 <!-- 윗부분(고정) -->
+
 
 
 
