--- a/Vote/VoteProject/vote/templates/vote/index.html
+++ b/Vote/VoteProject/vote/templates/vote/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
+
 <h1>투표 어플리케이션</h1>
 <p>투표할 질문을 선택해주세요</p>
 
@@ -28,5 +24,4 @@
 
 </table>
 
-</body>
-</html>
+{% endblock %}
