--- a/Vote/VoteProject/vote/templates/vote/result.html
+++ b/Vote/VoteProject/vote/templates/vote/result.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-
-<meta charset="UTF-8">
-
-<title>투표결과</title>
-
-</head>
-
-<body>
+{% extends 'base.html' %}
+{% block content %}
 
 	<h1>{{q.name}} 투표결과</h1>
 
@@ -23,9 +12,7 @@
 		{% endfor %}
 
 	</ul>
-
+	<a href="{% url 'vote:index' %}">메인페이지로 돌아가기</a>
 	
 
-</body>
-
-</html>
+{% endblock %}
