--- a/Vote/VoteProject/vote/templates/base.html
+++ b/Vote/VoteProject/vote/templates/base.html
@@ -1,38 +1,66 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
-<h2>netdream 홈페이지</h2>
-<a href="{% url 'vote:index' %}">설문조사</a>
+    <head>
+        <meta charset="UTF-8">
+        <title>Insert title here</title>
 
-<br>
-{% if user.is_authenticated %}<!-- 만약 로그인이 되어있는 상태이면 -->
-{{user.last_name}} {{user.first_name}}님 환영합니다. <!-- 다음과같이 출력 -->
-<a href="{% url 'login:signout' %}">로그아웃</a> <!-- 로그아웃이 뜨도록 한다. -->
-{% else %} <!-- 로그인이 되어있지않다면 -->
-<a href="{% url 'login:signin' %}">로그인</a> <!-- 로그인과-->
-<a href="{% url 'login:signup' %}">회원가입</a> <!-- 회원가입이 뜨도록 한다. -->
-{% endif %}
+        <style>
+            h1{
+                background-color: lightgray;
+                text-align: center;}
 
-<hr> 
-<!-- 윗부분(고정) -->
+            table {
+            width: 90%;
+            border-top: 1px solid #444444;
+            border-collapse: collapse;
+            margin: auto;
+            font-size: small;
+            text-align: center;
+            }
+
+            th {
+                border-bottom: 1px solid #444444;
+                padding: 10px;
+            }
+
+            td {
+                border-bottom: 1px solid #444444;
+                padding: 10px;
+                height: 35px;
+            }
+        </style>
+
+    </head>
+    
+    <body>
+    <h2>netdream 홈페이지</h2>
+    <a href="{% url 'vote:index' %}">설문조사</a>
+
+    <br>
+    {% if user.is_authenticated %}<!-- 만약 로그인이 되어있는 상태이면 -->
+    {{user.last_name}} {{user.first_name}}님 환영합니다. <!-- 다음과같이 출력 -->
+    <a href="{% url 'login:signout' %}">로그아웃</a> <!-- 로그아웃이 뜨도록 한다. -->
+    {% else %} <!-- 로그인이 되어있지않다면 -->
+    <a href="{% url 'login:signin' %}">로그인</a> <!-- 로그인과-->
+    <a href="{% url 'login:signup' %}">회원가입</a> <!-- 회원가입이 뜨도록 한다. -->
+    {% endif %}
+
+    <hr> 
+    <!-- 윗부분(고정) -->
 
 
 
 
-{% block content %}
-<!-- 변동부분을 block 지정해준다. -->
-{% endblock %}    
+    {% block content %}
+    <!-- 변동부분을 block 지정해준다. -->
+    {% endblock %}    
 
 
-<!--  아랫부분(고정) -->
-<hr> 
-<p>netdream blog</p>
-<p><a href=http://netdream.tistory.com/>netdream.com</a>으로 놀러오세요</p>
+    <!--  아랫부분(고정) -->
+    <hr> 
+    <p>netdream blog</p>
+    <p><a href=http://netdream.tistory.com/>netdream.com</a>으로 놀러오세요</p>
 
 
-</body>
+    </body>
 </html>
