--- a/Vote/VoteProject/vote/templates/vote/result.html
+++ b/Vote/VoteProject/vote/templates/vote/result.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+
 	<h1>{{q.name}} 투표결과</h1>
 
 	<ul>
@@ -12,7 +13,9 @@
 		{% endfor %}
 
 	</ul>
-	<a href="{% url 'vote:index' %}">메인페이지로 돌아가기</a>
+
 	
 
-{% endblock %}
+</body>
+
+</html>
