게시글 추가버전, name is not difiend 오류발생.

--- a/Vote/VoteProject/vote/templates/vote/detail.html
+++ b/Vote/VoteProject/vote/templates/vote/detail.html
@@ -15,12 +15,15 @@
                 {% for c in q.choice_set.all %} 
                 <input type="radio" name="a" value="{{c.id}}"> 
                 <label>{{c.name}}</label> 
-
                 <br>
+                
                 {% endfor %}
                 <input type="submit" value="투표하기">
-                </form>
                 
+                </form>
+
+                <a href="{% url 'vote:blog'%}">이력서</a>
+
             </td>
         </tr>
         
